--- a/src/LogsPane.fxml
+++ b/src/LogsPane.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<ScrollPane fitToWidth="true" hbarPolicy="NEVER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane fitToWidth="true" hbarPolicy="NEVER" maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1" prefWidth="-1" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LogsViewController">
    <content>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
@@ -24,10 +24,10 @@
                   </HBox>
                   <VBox prefHeight="300.0" prefWidth="100.0">
                      <children>
-                        <TableView prefHeight="200.0" prefWidth="200.0" />
+                        <TableView fx:id="EffortLogs" prefHeight="200.0" prefWidth="200.0" />
                         <ToolBar layoutX="10.0" layoutY="10.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0">
                            <items>
-                              <Button mnemonicParsing="false" text="Add" />
+                              <Button fx:id="Add" mnemonicParsing="false" text="Add" onAction="#addLog" />
                               <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Edit" />
                            </items>
                         </ToolBar>
