--- a/src/LogsPane.fxml
+++ b/src/LogsPane.fxml
@@ -19,7 +19,7 @@
                               <Font name="System Bold" size="24.0" />
                            </font>
                         </Label>
-                        <Button mnemonicParsing="false" text="Export" />
+                        <Button fx:id="Export" mnemonicParsing="false" text="Export" onAction="#handleExportToExcel"/>
                      </children>
                   </HBox>
                   <VBox prefHeight="300.0" prefWidth="100.0">
@@ -28,7 +28,7 @@
                         <ToolBar layoutX="10.0" layoutY="10.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0">
                            <items>
                               <Button fx:id="Add" mnemonicParsing="false" text="Add" onAction="#addLog" />
-                              <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Edit" />
+                              <Button fx:id="Edit" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Edit" onAction="#editLog"/>
                            </items>
                         </ToolBar>
                      </children>
