Current Changes thing

--- a/src/MainLayout.fxml
+++ b/src/MainLayout.fxml
@@ -36,7 +36,7 @@
                   <ToolBar prefHeight="40.0">
                     <items>
                         <Label text="John Smith" />
-                      <Button mnemonicParsing="false" text="No Role" />
+                      <Button mnemonicParsing="false" text="No Role" onAction="#roleButtonPressed" fx:id = "roleButton" />
                     </items>
                   </ToolBar>
                   <ToolBar layoutX="10.0" layoutY="10.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
