Added SQL for role stuff

--- a/src/MainLayout.fxml
+++ b/src/MainLayout.fxml
@@ -12,7 +12,7 @@
          <children>
             <ToolBar prefHeight="40.0" prefWidth="200.0">
               <items>
-                  <MenuButton mnemonicParsing="false" text="Project">
+                  <MenuButton mnemonicParsing="false" text="Project" fx:id = "ProjectMenu">
                     <items>
                       <MenuItem mnemonicParsing="false" text="Action 1" />
                       <MenuItem mnemonicParsing="false" text="Action 2" />
