--- a/src/ProjectPane.fxml
+++ b/src/ProjectPane.fxml
@@ -13,7 +13,7 @@
                <children>
                   <HBox spacing="10.0">
                      <children>
-                        <Label fx:id="ProjectNameLabel" text="Project Name" HBox.hgrow="ALWAYS" />
+                        <Label maxWidth="1.7976931348623157E308" fx:id="ProjectNameLabel" text="Project Name" HBox.hgrow="ALWAYS" styleClass="label-large"/>
                         <Button onAction="#onImportButtonPressed" mnemonicParsing="false" text="Import" />
                         <Button onAction="#onExportButtonPressed" mnemonicParsing="false" text="Export" />
                      </children>
